# unum

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  Vagrantfile
client/: package.json  webpack.config.js
client/src/: index.js
include/: challenge.hpp  sessions_controller.hpp  user.hpp  user_sessions_controller.hpp
include/core/: attr_base.hpp  attr_config.hpp  attr_map.hpp  io.hpp  model.hpp
scripts/db/: schema_changes.sql  toggle_sc.sql
scripts/db/fixtures/: 00_applications.sql  01_users.sql
scripts/migrations/: migration_batch_000_down.sql  migration_batch_000_up.sql
scripts/test/: integration.sh  seed.sh  setup.sh
scripts/vagrant/: .htaccess  apache.sh  bootstrap.sh  build.sh  common.env  devel.sh  dispatch.fcgi  mysql.sh  node.sh  sites-available-default.conf
src/: CMakeLists.txt  main.cpp
src/core/: attr_map.cpp  io.cpp  model.cpp
src/models/: user.cpp
tests/: CMakeLists.txt
tests/core/: io.cpp  model.cpp
tests/integration/: package-lock.json  package.json  test.js
tests/unit/: srp.cpp  user_model.cpp
